tests/typecheck/should_fail/TcCoercibleFail2.hs
import GHC.Types (Coercible)

instance Coercible () ()

main = return ()
